Added java ops for rdf4j

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
     image: eclipse/rdf4j-workbench:amd64-latest
     ports:
       - "8091:8080"
-    # environment: 
-    #   - JAVA_OPTS="-Xms1g -Xmx4g"
+    environment: 
+      - JAVA_OPTS="-Xms1g -Xmx4g"
     volumes:
       - "$PWD/data/rdf4j:/var/rdf4j"
       - "$PWD/data/rdf4j/logs:/usr/local/tomcat/logs"
